cmake_minimum_required(VERSION 3.20)
project(full3DProject C CXX HIP)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(hip REQUIRED)
add_executable(full3DProject copyMain.c)
target_link_libraries(full3DProject PRIVATE ${SDL2_LIBRARIES} SDL2_image hip::host hip::device m)
target_include_directories(full3DProject PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})